# Conways-Game-of-Life

./: Makefile  README.md  doxConfig
experiment/: main.cpp  main.d
include/: GameBoard.h  View.h
spec/: spec.tex
src/: CMakeLists.txt  GameBoard.cpp  GameBoard.d  View.cpp  View.d
test/: testBoard.cpp  testBoard.d  testView.cpp  testView.d
